# wb_mpc

./: .gitmodules
casadi_catkin/: CMakeLists.txt  package.xml
legged_control/legged_controllers/config/a1/: task.info
legged_control/legged_controllers/include/legged_controllers/: LeggedController.h
legged_control/legged_controllers/src/: LeggedController.cpp
legged_control/legged_examples/legged_unitree/legged_unitree_description/meshes/a1/: calf.dae  hip.dae  thigh.dae  thigh_mirror.dae
legged_control/legged_examples/legged_unitree/legged_unitree_description/meshes/aliengo/: hip.dae  thigh.dae  thigh_mirror.dae  trunk.dae
legged_control/legged_examples/legged_unitree/legged_unitree_description/urdf/common/: gazebo.xacro
legged_control/legged_wbc/: CMakeLists.txt
legged_control/legged_wbc/include/legged_wbc/: RneaWbc.h
legged_control/legged_wbc/src/: RneaWbc.cpp  WbcBase.cpp  WeightedWbc.cpp
